--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/script_customerSide.js"></script>
+    <script src="js/script_companySide.js"></script>
     <title></title>
   </head>
   <body>
     <div class="container">
 
+      <div class="row" id="customerUi">
+
+      </div>
+
+      <div class="row" id="companySide">
+
+      </div>
 
 
     </div>
