add basic back end and UI functionality

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
       </div>
 
-      <div class="row" id="companySide">
-
+      <div id="companySide">
+        <h4>Here are the outstanding tickets:</h4>
+        <ol id="ticketList"></ol>
       </div>
-
 
     </div>
   </body>
