add order ready list

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
 
       </div>
 
-      <div id="companySide">
-        <h4>Here are the outstanding tickets:</h4>
-        <ol id="ticketList"></ol>
+      <div class="row" id="companySide">
+        <div class="col-sm-6">
+          <h4>Here are the outstanding tickets:</h4>
+          <ol id="ticketList"></ol>
+        </div>
+        <div class="col-sm-6">
+          <h4>Your order is ready!  Please come to the bar!</h4>
+          <ol id="readyList"></ol>
+        </div>
       </div>
 
     </div>
