fix spacing and indentation, remove uneeded comments and add relevant ones

--- a/index.html
+++ b/index.html
@@ -24,37 +24,31 @@
         </div>
       </div>
 
-
-
       <div class="row" id="customerSide">
-
+        <!-- Customer logic will go here -->
       </div>
 
       <div class="row" id="companySide">
         <div class="row">
-
-        <div class="col-6" id="outstandingTickets">
-
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Here are the outstanding tickets:</h4>
-              <ol class="card-text" id="ticketList"></ol>
+          <div class="col-6" id="outstandingTickets">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Here are the outstanding tickets:</h4>
+                <ol class="card-text" id="ticketList"></ol>
+              </div>
             </div>
           </div>
 
-        </div>
-
-        <div class="col-6" id="completedTickets">
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Your order is ready!  Please come to the bar!</h4>
-              <ol class="card-text" id="readyList"></ol>
+          <div class="col-6" id="completedTickets">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Your order is ready!  Please come to the bar!</h4>
+                <ol class="card-text" id="readyList"></ol>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-
     </div>
   </body>
 </html>
