--- a/index.html
+++ b/index.html
@@ -12,8 +12,43 @@
     <div class="container">
 
       <div class="row" id="customerUi">
-
-      </div>
+        <form id="form1" action="index.html" method="post">
+          <div class = "col-lg-4">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="beers" value="2.00" data-value2="PBR">
+            <label class ="form-check-label" for="PBR">PBR</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="beers" value="2.00" data-value2="Tecate">
+            <label class ="form-check-label" for="Tecate">Tecate</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="Rogue">
+            <label class ="form-check-label" for="Rogue">Rogue</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="Portland-cider-company">
+            <label class ="form-check-label" for="Portland-cider-company">Cider</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="beers" value="2.00" data-value2="Coors">
+            <label class ="form-check-label" for="Coors">Coors</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="beers" value="2.00" data-value2="Rolling-rock">
+            <label class ="form-check-label" for="Rolling-rock">Rolling Rock</label>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <label for="customer-information">Please enter your name, number, and date of birth below</label>
+          <input type="text" id="first-name" placeholder="John">
+          <input type="text" id="last-name" placeholder="Johnson">
+          <input type="text" id="phone-number" placeholder="234-456-7890">
+          <input class ="form-control" id="date-of-birth" type="date">
+        </div>
+        <button type="submit" class ="btn btn-dark" name="button">Submit Order</button>
+      </form>
+    </div>
 
       <div class="row" id="companySide">
 
