add running tab

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <form id="form1" action="index.html" method="post">
           <div class="row">
-            <div class=" col-md-4 active">
+            <div class=" col-md-4">
               <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="images/drink/pbr.jpeg" alt="Card image cap">
                 <div class="card-body">
@@ -300,6 +300,7 @@
                   </div>
                 </div>
               </div>
+              <div class="row">
 
               <div class=" col-md-4">
                 <div class="card" style="width: 18rem;">
@@ -311,16 +312,20 @@
                       <input type="text" id="phone-number" placeholder="234-456-7890">
                       <input class="form-control" id="date-of-birth" type="date">
                     </div>
-                    <button type="submit" class="btn btn-dark" name="button">Submit Order</button>
+                    <button type="submit" class="btn btn-dark" name="button">Add to Order</button>
+                    <button type="submit" class="btn btn-dark"  name="button">Submit order</button>
+                    <button type="click" class="btn btn-dark" name="button">See Current Tab</button>
                   </div>
                 </div>
               </div>
             </form>
-
           </div>
         </div>
+        <div id="currentTab">
+          
+        </div>
       </div>
-
+    </div>
 
       <div class="row" id="companySide">
         <div class="row">
