connect customer and company side

--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                       <input class="form-control" id="date-of-birth" type="date">
                     </div>
                     <button type="submit" class="btn btn-dark" name="button">Add to Order</button>
-                    <button type="submit" class="btn btn-dark"  name="button">Submit order</button>
-                    <button type="click" class="btn btn-dark" name="button">See Current Tab</button>
+                    <button type="button" class="btn btn-dark"  name="button" id="submitOrderButton">Submit order</button>
+                    <!-- <button type="click" class="btn btn-dark" name="button">See Current Tab</button> -->
                   </div>
                 </div>
               </div>
@@ -322,7 +322,7 @@
           </div>
         </div>
         <div id="currentTab">
-          
+
         </div>
       </div>
     </div>
