--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
               </div>
               <div class="row">
 
-              <div class=" col-md-4">
+              <div class=" col-md-4" id="detailForm">
                 <div class="card" style="width: 18rem;">
                   <div class="card-body">
                     <div class="form-check">
-                      <h5 class="card-title">Please enter your name, number, and date of birth below</h5>
+                      <h5 class="card-title name-form">Please enter your name, number, and date of birth below</h5>
                       <input type="text" id="first-name" placeholder="John">
                       <input type="text" id="last-name" placeholder="Johnson">
                       <input type="text" id="phone-number" placeholder="234-456-7890">
