add styling to current tab

--- a/index.html
+++ b/index.html
@@ -319,10 +319,17 @@
                 </div>
               </div>
             </form>
-          </div>
-        </div>
-        <div id="currentTab">
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">The items currently on your tab are:</h5>
+                  <div id="currentTab">
 
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
