add click handler to toggle a div's checkbox when div is clicked

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <form id="form1" action="index.html" method="post">
           <div class="row">
             <div class=" col-md-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card drinkCard" style="width: 18rem;">
                 <img class="card-img-top" src="images/drink/pbr.jpeg" alt="Card image cap">
                 <div class="card-body">
                   <div class="form-check">
@@ -44,7 +44,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/tecatejpg.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -58,7 +58,7 @@
                 </div>
               </div>
               <div class=" col-md-4 ">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/HUB.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -75,7 +75,7 @@
 
             <div class="row">
               <div class=" col-md-4 ">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/breakside-pils.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -89,7 +89,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/ninkasiPils.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -103,7 +103,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/riverale.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -121,7 +121,7 @@
 
             <div class="row">
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/vaporizer.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -135,7 +135,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/rpm.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/bluedot.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -167,7 +167,7 @@
 
             <div class="row">
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/longBrewing.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -181,7 +181,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/chainbreaker.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -195,7 +195,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/wholeInTheHead.jpg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -212,7 +212,7 @@
 
             <div class="row">
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/ashlandAmber.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -226,7 +226,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/killdevil.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -240,7 +240,7 @@
                 </div>
               </div>
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/brothes.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -257,7 +257,7 @@
 
             <div class="row">
               <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/peach.jpeg" alt="Card image cap">
                   <div class="card-body">
                     <div class="form-check">
@@ -272,7 +272,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="card" style="width: 18rem;">
+                  <div class="card drinkCard" style="width: 18rem;">
                     <img class="card-img-top" src="images/drink/cascade.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <div class="form-check">
@@ -286,7 +286,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="card" style="width: 18rem;">
+                  <div class="card drinkCard" style="width: 18rem;">
                     <img class="card-img-top" src="images/drink/sweetheat.JPG" alt="Card image cap">
                     <div class="card-body">
                       <div class="form-check">
@@ -303,7 +303,7 @@
               <div class="row">
 
               <div class=" col-md-4">
-                <div class="card" style="width: 18rem;">
+                <div class="card drinkCard" style="width: 18rem;">
                   <div class="card-body">
                     <div class="form-check">
                       <h5 class="card-title">Please enter your name, number, and date of birth below</h5>
