--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                       <h5 class="card-title">Hopworks Urban Brewing Lager</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Hopworks Urban Brewing<br>5.10% ABV<br>$5.00</h6>
                       <p class="card-text">Grainy, golden, 100% organin, formerly draft only brew spiced with Zeus hops.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Hopworks-Urban-Brewing">
+                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Hopworks Urban Brewing">
                       <label class="form-check-label" for="Hopworks-Urban-Brewing">Check here to add to order!</label>
                     </div>
                   </div>
@@ -82,7 +82,7 @@
                       <h5 class="card-title">Pilsner by Breakside Brewing</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Breakside Brewing<br>5.30% ABV<br>$5.00</h6>
                       <p class="card-text">Easy pilsner with biscuit-like maltiness and a light, tangy, citrusy kick.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Breakside-Pilsner">
+                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Breakside Pilsner">
                       <label class="form-check-label" for="Breakside-Pilsner">Check here to add to order!</label>
                     </div>
                   </div>
@@ -96,7 +96,7 @@
                       <h5 class="card-title">Ninkasi Pilsner</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Ninkasi Brewing Co <br>5.10% ABV<br>$4.50</h6>
                       <p class="card-text">Malt forward, German-style pilsner with spicy, crackling hop notes.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="4.50" data-value2="Ninkasi-Pilsner">
+                      <input class="form-check-input" type="checkbox" name="beers" value="4.50" data-value2="Ninkasi Pilsner">
                       <label class="form-check-label" for="Ninkasi-Pilsner">Check here to add to order!</label>
                     </div>
                   </div>
@@ -110,7 +110,7 @@
                       <h5 class="card-title">River Ale</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Deschutes Brewery<br>4.0% ABV<br>$4.00</h6>
                       <p class="card-text">Sociably low-alcohol with ample Cascade and Crystal hops kick this light golden ale up a notch.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="River-Ale">
+                      <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="River Ale">
                       <label class="form-check-label" for="River-Ale">Check here to add to order!</label>
                     </div>
                   </div>
@@ -128,7 +128,7 @@
                       <h5 class="card-title">Vaporizer</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Double Mountain Brewery<br>6.0% ABV<br>$5.00</h6>
                       <p class="card-text">Hazy-gold with a sweet, grainy start and a dry, lemony finish.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="vaporizer">
+                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Vaporizer">
                       <label class="form-check-label" for="vaporizer">Check here to add to order!</label>
                     </div>
                   </div>
@@ -156,7 +156,7 @@
                       <h5 class="card-title">Blue Dot Double IPA</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Hair of the Dog Brewing Co<br>6.0% ABV<br>$5.00</h6>
                       <p class="card-text">Brawny and resinously hoppy without the acrid finish that can mar lesser interpretations</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="blue-dot">
+                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Blue Dot">
                       <label class="form-check-label" for="blue-dot">Check here to add to order!</label>
                     </div>
                   </div>
@@ -188,7 +188,7 @@
                       <h5 class="card-title">Chainbreaker White IPA</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Deschutes Brewery <br>5.60% ABV<br>$4.00</h6>
                       <p class="card-text">Named for a legendary mountain bike race, this delicious cloudy-gold ale is a lovely hybrid of Belgian wit—orange peel and coriander-spiced—and tangy, Northwest-style IPA.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="chainbreaker">
+                      <input class="form-check-input" type="checkbox" name="beers" value="4.00" data-value2="Chainbreaker">
                       <label class="form-check-label" for="chainbreaker">Check here to add to order!</label>
                     </div>
                   </div>
@@ -202,7 +202,7 @@
                       <h5 class="card-title">Whole in the Head</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Hair of the Dog Brewing Co<br>6.0% ABV<br>$5.00</h6>
                       <p class="card-text">Brawny and resinously hoppy without the acrid finish that can mar lesser interpretations</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="blue-dot">
+                      <input class="form-check-input" type="checkbox" name="beers" value="5.00" data-value2="Whole in the head">
                       <label class="form-check-label" for="blue-dot">Check here to add to order!</label>
                     </div>
                   </div>
@@ -233,7 +233,7 @@
                       <h5 class="card-title">Kill Devil Brown Ale</h5>
                       <h6 class="card-subtitle mb-2 text-muted">Widmer Brothers Brewing <br>9.50% ABV<br>$6.75</h6>
                       <p class="card-text">Caribbean mainstays like blackstrap molasses and palm sugar amp up this approximately English-style brown aged in Puerto Rican rum barrels and spiced with fruity Calypso hops.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="6.75" data-value2="kill-devil">
+                      <input class="form-check-input" type="checkbox" name="beers" value="6.75" data-value2="Kill Devil">
                       <label class="form-check-label" for="kill-devil">Check here to add to order!</label>
                     </div>
                   </div>
@@ -247,7 +247,7 @@
                       <h5 class="card-title">Brother Thelonious</h5>
                       <h6 class="card-subtitle mb-2 text-muted">North Coast Brewing<br>9.40% ABV<br>$9.00</h6>
                       <p class="card-text">The beer is being released in conjunction with the Thelonious Monk Institute of Jazz, and the brewery will make a contribution to the Institute for every case sold to support jazz education.</p>
-                      <input class="form-check-input" type="checkbox" name="beers" value="9.00" data-value2="brother-Thelonious">
+                      <input class="form-check-input" type="checkbox" name="beers" value="9.00" data-value2="Brother Thelonious">
                       <label class="form-check-label" for="brother-Thelonious">Check here to add to order!</label>
                     </div>
                   </div>
@@ -279,7 +279,7 @@
                         <h5 class="card-title">Cascade Apricot</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Cascade Barrel House <br>8.50% ABV<br>$6.75</h6>
                         <p class="card-text">Bright and hazy orange with a zingy, lemony tartness up front, this Belgian-style ale flows with waves of delicious, ripe apricot flavor.</p>
-                        <input class="form-check-input" type="checkbox" name="beers" value="6.75" data-value2="apricot-sour">
+                        <input class="form-check-input" type="checkbox" name="beers" value="6.75" data-value2="Apricot Sour">
                         <label class="form-check-label" for="apricot-sour">Check here to add to order!</label>
                       </div>
                     </div>
@@ -293,7 +293,7 @@
                         <h5 class="card-title">Sweet Heat</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Burnside Brewing Co<br>4.90% ABV<br>$5.00</h6>
                         <p class="card-text">Lesser chile beers crash the palate party and leave. But Burnside’s is brewed with apricot purée and Scotch bonnet peppers, which supply a lingering, welcome heat.</p>
-                        <input class="form-check-input" type="checkbox" name="beers" value="4.90" data-value2="sweet-heat">
+                        <input class="form-check-input" type="checkbox" name="beers" value="4.90" data-value2="Sweet Heat">
                         <label class="form-check-label" for="sweet-heat">Check here to add to order!</label>
                       </div>
                     </div>
