--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container-fluid">
         <form id="form1" action="index.html" method="post">
           <div class="row">
-            <div class=" col-md-4">
+            <div class=" col-lg-4">
               <div class="card drinkCard" style="width: 18rem;">
                 <img class="card-img-top" src="images/drink/pbr.jpeg" alt="Card image cap">
                 <div class="card-body">
@@ -43,7 +43,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/tecatejpg.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -57,7 +57,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4 ">
+              <div class=" col-lg-4 ">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/HUB.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -74,7 +74,7 @@
             </div>
 
             <div class="row">
-              <div class=" col-md-4 ">
+              <div class=" col-lg-4 ">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/breakside-pils.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -88,7 +88,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/ninkasiPils.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -102,7 +102,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/riverale.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -120,7 +120,7 @@
 
 
             <div class="row">
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/vaporizer.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -134,7 +134,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/rpm.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -148,7 +148,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/bluedot.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -166,7 +166,7 @@
 
 
             <div class="row">
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/longBrewing.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -180,7 +180,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/chainbreaker.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -194,7 +194,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/wholeInTheHead.jpg" alt="Card image cap">
                   <div class="card-body">
@@ -211,7 +211,7 @@
             </div>
 
             <div class="row">
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/ashlandAmber.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -225,7 +225,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/killdevil.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -239,7 +239,7 @@
                   </div>
                 </div>
               </div>
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/brothes.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -256,7 +256,7 @@
             </div>
 
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <img class="card-img-top" src="images/drink/peach.jpeg" alt="Card image cap">
                   <div class="card-body">
@@ -271,7 +271,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                   <div class="card drinkCard" style="width: 18rem;">
                     <img class="card-img-top" src="images/drink/cascade.jpeg" alt="Card image cap">
                     <div class="card-body">
@@ -285,7 +285,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-lg-4">
                   <div class="card drinkCard" style="width: 18rem;">
                     <img class="card-img-top" src="images/drink/sweetheat.JPG" alt="Card image cap">
                     <div class="card-body">
@@ -302,7 +302,7 @@
               </div>
               <div class="row">
 
-              <div class=" col-md-4">
+              <div class=" col-lg-4">
                 <div class="card drinkCard" style="width: 18rem;">
                   <div class="card-body">
                     <div class="form-check">
