--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <form id="form1" action="index.html" method="post">
       <div class="row">
         <div class=" col-md-4">
-          <div class="card" style="width: 18rem;">
+          <div class="card drinkCard" style="width: 18rem;">
             <img class="card-img-top" src="images/drink/pbr.jpeg" alt="Card image cap">
             <div class="card-body">
               <div class="form-check">
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/tecatejpg.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class=" col-md-4 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/HUB.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -77,7 +77,7 @@
 
         <div class="row">
           <div class=" col-md-4 ">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/breakside-pils.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/ninkasiPils.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/riverale.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -123,7 +123,7 @@
 
         <div class="row">
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/vaporizer.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -137,7 +137,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/rpm.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/bluedot.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -169,7 +169,7 @@
 
         <div class="row">
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/longBrewing.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -183,7 +183,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/chainbreaker.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -197,7 +197,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/wholeInTheHead.jpg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -214,7 +214,7 @@
 
         <div class="row">
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/ashlandAmber.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -228,7 +228,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/killdevil.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -242,7 +242,7 @@
             </div>
           </div>
           <div class=" col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/brothes.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -259,7 +259,7 @@
 
         <div class="row">
           <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card drinkCard" style="width: 18rem;">
               <img class="card-img-top" src="images/drink/peach.jpeg" alt="Card image cap">
               <div class="card-body">
                 <div class="form-check">
@@ -274,7 +274,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card drinkCard" style="width: 18rem;">
                 <img class="card-img-top" src="images/drink/cascade.jpeg" alt="Card image cap">
                 <div class="card-body">
                   <div class="form-check">
@@ -288,7 +288,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="card" style="width: 18rem;">
+              <div class="card drinkCard" style="width: 18rem;">
                 <img class="card-img-top" src="images/drink/sweetheat.JPG" alt="Card image cap">
                 <div class="card-body">
                   <div class="form-check">
