remove s from title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/script_customerSide.js"></script>
   <script src="js/script_companySide.js"></script>
-  <title></title>
+  <title>barMate</title>
 </head>
 
 <body>
@@ -16,7 +16,7 @@
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
     </video>
-    <h3>barMates<b><p>v0.5</p></h3>
+    <h3>barMate<b><p>v0.5</p></h3>
   </div>
   <div class="row" id="selection">
     <div class="offset-md-4 col-md-4">
