change version number and comments

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
+  <!-- Move container below video wrapper after demo -->
   <div class="container">
   <div class="video-wrapper">
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
     </video>
-    <h3>barMate<b><p>v0.5</p></h3>
+    <h3>barMate<b><p>v0.9</p></h3>
   </div>
+
   <div class="row" id="selection">
     <div class="offset-md-4 col-md-4">
       <h4>Which are you?</h4>
@@ -25,6 +27,7 @@
       <button id="company" class="btn btn-info" type="button" name="button">Bartender</button>
     </div>
   </div>
+
 
 <div id="customerSide">
   <div class="container-fluid">
@@ -316,7 +319,6 @@
                 </div>
                 <button type="submit" class="btn btn-dark" name="button">Add to Order</button>
                 <button type="button" class="btn btn-dark"  name="button" id="submitOrderButton">Submit order</button>
-                <!-- <button type="click" class="btn btn-dark" name="button">See Current Tab</button> -->
               </div>
             </div>
           </div>
