--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
     </video>
-    <h3>barMate<b><p>v0.9</p></h3>
+    <h3>barMate<b><p id="version">v0.9</p></h3>
   </div>
 
   <div class="row" id="selection">
