--- a/index.html
+++ b/index.html
@@ -16,15 +16,47 @@
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
     </video>
-    <h3>barMates<b><p>v0.5</p></h3>
+    <h3>barMate<b><p>v0.5</p></h3>
   </div>
-  <div class="row" id="selection">
-    <div class="offset-md-4 col-md-4">
-      <h4>Which are you?</h4>
-      <button id="customer" class="btn btn-info" type="button" name="button">Customer</button>
-      <button id="company" class="btn btn-info" type="button" name="button">Bartender</button>
+  <div class="container">
+    <p class ="lead text-center">
+      "barMate offers an easy to use solution for handling a large volume of customer drink orders, improving service efficency, and provides an interpretable business side interface"
+    </p>
+    <div class="content">
+      <h4 class="text-center">Which are you?</h4>
+      <div class="row" id="selection">
+        <div class="col-sm-6">
+          <figure>
+            <img src="images/bckgrnd/customers.jpg" class="img-responsive">
+          </figure>
+          <div>
+            <h3>Customer</h3>
+            <p>With a sleek and easy to use interface simply select the beer of choice and a description of the beer will appear as it is added to your order. Don't want the beer? Simply unclick the beer</p>
+            <p>
+            <br>
+            </p>
+            <button id="customer" class="btn btn-info" type="button" name="button">Customer</button>
+          </div>
+          </div>
+          <div class="col-sm-6">
+            <figure>
+              <img src="images/bckgrnd/company.jpg" class="img-responsive">
+            </figure>
+            <div>
+              <h3>Company</h3>
+              <p>View all current drink tickets, open tabs, and inform users that their order is ready.</p>
+              <p>
+              <br>
+              </p>
+              <button id="company" class="btn btn-info" type="button" name="button">Bartender</button>
+            </div>
+            </div>
+        </div>
+      </di>
     </div>
   </div>
+
+
 
 <div id="customerSide">
   <div class="container-fluid">
