--- a/index.html
+++ b/index.html
@@ -11,16 +11,33 @@
 </head>
 
 <body>
-  <div class="container">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4" id="head">
+          <img id="logo" src="images/logo.png">
+        </div>
+        <div class="col-lg-8">
+          <div class="navbar navbar-default">
+            <nav>
+
+            </nav>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
   <div class="video-wrapper">
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
     </video>
     <h3>barMate<b><p>v0.5</p></h3>
   </div>
+
   <div class="container">
     <p class ="lead text-center">
-      "barMate offers an easy to use solution for handling a large volume of customer drink orders, improving service efficency, and provides an interpretable business side interface"
+      barMate offers an easy to use solution for handling a large volume of customer drink orders, improving service efficency, and provides an interpretable business side interface
     </p>
     <div class="content">
       <h4 class="text-center">Which are you?</h4>
@@ -58,6 +75,7 @@
 
 
 
+  <div class="container">
 <div id="customerSide">
   <div class="container-fluid">
     <form id="form1" action="index.html" method="post">
