--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
               </div>
             </div>
           </div>
-          <div class="row">
 
+        <!-- <div class="row">
           <div class=" col-md-4" id="detailForm">
             <div class="card" style="width: 18rem;">
               <div class="card-body">
@@ -333,9 +333,34 @@
             </div>
           </div>
         </div>
+      </div> -->
+    </div>
+  </div>
+
+<!-- Floating Menu -->
+<div id="sidenav">
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <div class="form-check">
+        <h5 class="card-title name-form">Please enter your name, number, and date of birth below</h5>
+        <input type="text" id="first-name" placeholder="John">
+        <input type="text" id="last-name" placeholder="Johnson">
+        <input type="text" id="phone-number" placeholder="234-456-7890">
+        <input class="form-control" id="date-of-birth" type="date">
+      </div>
+      <button type="submit" class="btn btn-dark" name="button">Add to Order</button>
+      <button type="button" class="btn btn-dark"  name="button" id="submitOrderButton">Submit order</button>
+    </div>
+  </div>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">The items currently on your tab are:</h5>
+      <div id="currentTab">
       </div>
     </div>
   </div>
+</div>
+
 
   <div class="row" id="companySide">
     <div class="row">
