--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
     <h3>barMate<b><p>v0.9</p></h3>
   </div>
 
-  <div class="container">
+  <div class="container" id="selection">
     <p class ="lead text-center">
       barMate offers an easy to use solution for handling a large volume of customer drink orders, improving service efficency, and provides an interpretable business side interface
     </p>
     <div class="content">
       <h4 class="text-center">Which are you?</h4>
-      <div class="row" id="selection">
+      <div class="row">
         <div class="col-sm-6">
           <figure>
             <img src="images/bckgrnd/customers.jpg" class="img-responsive">
@@ -432,6 +432,16 @@
           </div>
         </div>
       </div>
+    </div>
+    <div id="authenticate">
+      <h5>Welcome to barMates bar side interface!  Please enter the username and password for your bar!</h5>
+      <form id="authenticateForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username">
+        <label for="password">Password:</label>
+        <input type="password" id="password">
+        <button type="submit" name="button">Submit</button>
+      </form>
     </div>
   </div>
 </body>
