edit placement of order button

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
       </div>
     </div>
     <div id="orderButtons">
-      <button type="submit" class="btn btn-outline-info" name="button" id="addOrder">Add to Order</button>
-      <button type="button" class="btn btn-outline-info"  name="button" id="submitOrderButton">Submit order</button>
+      <button type="submit" class="btn btn-outline-info" name="button" id="addOrder">Add Order</button>
+      <button type="button" class="btn btn-outline-info"  name="button" id="submitOrderButton">Submit Order</button>
     </div>
   </div>
   <div class="card" style="width: 20rem;">
@@ -359,7 +359,7 @@
   </div>
   <div class="card" style="width: 20rem;">
     <div class="card-body" id="tab">
-      <h6 class="card-title">The items currently on your tab are:</h6>
+      <h6 class="card-title">Items on Current Tab:</h6>
       <div id="currentTab">
       </div>
     </div>
