fix error when submitting order with a removed drink

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
       <div class="card" style="width: 20rem;">
         <div class="card-body" id="userInfo">
           <div class="form-check">
+            <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h6 class="card-title name-form">Please enter your name, number, and date of birth below</h6>
             <input type="text" id="first-name" placeholder="First Name">
             <input type="text" id="last-name" placeholder="Last Name">
@@ -403,8 +404,9 @@
       <div class="card" style="width: 20rem;">
         <button type="submit" class="btn btn-outline-info" name="button" id="startOrder">Order</button>
       </div>
-      <div class="card" style="width: 20rem;">
-        <div class="card-body" id="tab">
+      <div class="card" id="tab" style="width: 20rem;">
+        <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <div class="card-body">
           <h6 class="card-title">The items currently on your tab are:</h6>
           <div id="currentTab">
           </div>
