--- a/index.html
+++ b/index.html
@@ -11,29 +11,13 @@
 </head>
 
 <body>
-    <!-- <div class="container">
-      <div class="row">
-        <div class="col-lg-4" id="head">
-          <img id="logo" src="images/logo.png">
-        </div>
-        <div class="col-lg-8">
-          <div class="navbar navbar-default">
-            <nav>
-
-            </nav>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
-
 
   <div class="video-wrapper">
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
     </video>
     <h3><img id="logo" src="images/logo.png">
-    <p>v0.9</p>
+    <p id="versionNum">v0.9</p>
   </h3>
   </div>
 
