remove customer and company buttons and link pictures to the appropriate divs

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="row">
           <div class="col-sm-6">
             <figure>
-              <img src="images/bckgrnd/customers.jpg" class="img-responsive">
+              <img id="customerPic" src="images/bckgrnd/customers.jpg" class="img-responsive">
             </figure>
             <div>
               <h3>Customer</h3>
@@ -38,12 +38,11 @@
               <p>
               <br>
               </p>
-              <button id="customer" class="btn btn-info" type="button" name="button">Customer</button>
             </div>
             </div>
             <div class="col-sm-6">
               <figure>
-                <img src="images/bckgrnd/company.jpg" class="img-responsive">
+                <img id ="companyPic" src="images/bckgrnd/company.jpg" class="img-responsive">
               </figure>
               <div>
                 <h3>Company</h3>
@@ -51,7 +50,6 @@
                 <p>
                 <br>
                 </p>
-                <button id="company" class="btn btn-info" type="button" name="button">Bartender</button>
               </div>
               </div>
           </div>
