round edges of pictures

--- a/index.html
+++ b/index.html
@@ -366,8 +366,16 @@
       </form>
     </div>
 
+
+
+
+
+  
+
+
+
       <!-- Floating Menu -->
-      <div id="sidenav">
+      <div class="fixed-nav-bar" id="sidenav">
         <div class="card" style="width: 20rem;">
           <div class="card-body" id="userInfo">
             <div class="form-check">
