--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
             <div class="form-check">
               <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h6 class="card-title name-form">Please enter your name, number, and date of birth below</h6>
-              <input type="text" id="first-name" placeholder="First Name">
-              <input type="text" id="last-name" placeholder="Last Name">
-              <input type="text" id="phone-number" placeholder="Phone Number">
-              <input id="date-of-birth" type="date">
+              <input class="form-control" type="text" id="first-name" placeholder="First Name">
+              <input class="form-control" type="text" id="last-name" placeholder="Last Name">
+              <input class="form-control" type="text" id="phone-number" placeholder="Phone Number">
+              <input class="form-control" id="date-of-birth" type="date">
             </div>
           </div>
           <div id="orderButtons">
