adjusted ids for sidenav divs to properly hide/show

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
       <!-- Floating Menu -->
       <div id="sidenav">
-        <div class="card" style="width: 20rem;">
-          <div class="card-body" id="userInfo">
+        <div class="card" id="userInfo" style="width: 20rem;">
+          <div class="card-body">
             <div class="form-check">
               <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <h6 class="card-title name-form">Please enter your name, number, and date of birth below</h6>
@@ -78,9 +78,7 @@
             <button type="button" class="btn btn-outline-info" name="button" id="submitOrderButton">Submit order</button>
           </div>
         </div>
-        <div class="card" style="width: 20rem;">
           <button type="submit" class="btn btn-outline-info" name="button" id="startOrder">Order</button>
-        </div>
         <div class="card" id="tab" style="width: 20rem;">
           <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <div class="card-body">
