fix sidenav display bug

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
           <!-- Floating Menu -->
           <div id="sidenav">
-            <div class="card" id="useless" style="width: 20rem;">
+            <div class="card sideNavCard" id="useless" style="width: 20rem;">
               <div class="card-body" id="userInfo">
                 <div class="form-check">
                   <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -96,10 +96,10 @@
                 <button type="button" class="btn btn-outline-info" name="button" id="submitOrderButton">Submit order</button>
               </div>
             </div>
-            <div class="card" style="width: 20rem;">
+            <div class="card sideNavCard" style="width: 20rem;">
               <button type="submit" class="btn btn-outline-info" name="button" id="startOrder">Order</button>
             </div>
-            <div class="card" id="tab" style="width: 20rem;">
+            <div class="card sideNavCard" id="tab" style="width: 20rem;">
               <button type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
               <div class="card-body">
                 <h6 class="card-title">The items currently on your tab are:</h6>
