add background image

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <script src="js/script_companySide.js"></script>
   <title>barMate</title>
 </head>
-<body>
-  <div class="video-wrapper">
+<body id="body">
+  <div class="row">
+    <p><br><br></p>
+  </div>
+<div class="video-wrapper">
     <video poster="video/video.jpg" id="bgvid" playsinline autoplay muted loop>
       <source src="video/video.mp4" type="video/mp4">
       </video>
@@ -62,7 +65,7 @@
 
 
 
-          <!-- Floating Menu -->
+          <!--Floating Menu -->
 
           <br>
           <br>
