--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         barMate offers an easy to use solution for handling a large volume of customer drink orders, improving service efficency, and provides an interpretable business side interface
       </p>
       <div class="content">
-        <h4 class="text-center" id="openQ">Which   are   you?</h4>
+        <h4 class="text-center" id="openQ">Which are you?</h4>
         <br>
 
         <div class="row">
@@ -35,9 +35,9 @@
             <figure>
               <img id="customerPic" src="images/bckgrnd/customers.jpg" class="img-responsive">
             </figure>
-            <div>
+            <div >
               <h3 class="head">Customer</h3>
-              <p>With a sleek and easy to use interface simply select the beer of choice and a description of the beer will appear as it is added to your order. Don't want the beer? Simply unclick the beer</p>
+              <p class="body">With a sleek and easy to use interface simply select the beer of choice and a description of the beer will appear as it is added to your order. Don't want the beer? Simply unclick the beer</p>
               <p>
                 <br>
               </p>
@@ -49,7 +49,7 @@
             </figure>
             <div>
               <h3 class="head">Company</h3>
-              <p>View all current drink tickets, open tabs, and inform users that their order is ready.</p>
+              <p class="body">View all current drink tickets, open tabs, and inform users that their order is ready.</p>
               <p>
                 <br>
               </p>
